<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:background="@drawable/backdrop"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
	
    <TextView
        android:id="@+id/main_text_title"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:gravity="center"
	android:layout_marginTop="10dp"
	android:layout_marginBottom="25dp"
	
	android:text="@string/main_title" />
    
    <EditText
    android:id="@+id/inputName"
    android:layout_height="wrap_content"
    android:layout_width="250dp"
    android:singleLine="true"
    android:ellipsize="middle"
    android:layout_gravity="center"
    android:hint="@string/name"/>
    
    <EditText
    android:id="@+id/inputMobileNumber"
    android:layout_height="wrap_content"
    android:layout_width="250dp"
    android:inputType="number"
    android:singleLine="true"
    android:maxLength="10"
    android:layout_gravity="center"
    android:hint="@string/mobile"/>
    
    <EditText
    android:id="@+id/inputEmailID"
    android:layout_height="wrap_content"
	android:layout_width="250dp"
    android:inputType="textEmailAddress"
    android:singleLine="true"
    android:layout_gravity="center"
    android:hint="@string/email"/>
    
    <EditText
    android:id="@+id/inputPassword"
    android:layout_height="wrap_content"
    android:layout_width="250dp"
    android:inputType="textPassword"
    android:singleLine="true"
    android:layout_gravity="center"
    android:hint="@string/password"/>
    
    <Button
    android:id="@+id/buttonSignUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"    
    android:text="@string/signUpButton"
        />
    
 	<Button
    android:id="@+id/buttonSingIn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"    
    android:text="Sign In"
        />
    
</LinearLayout>