<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backdrop"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/app_padding_left_right"
    android:paddingRight="@dimen/app_padding_left_right" >

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shape_edittext_intra_distance"
        android:background="@drawable/shape_edittext_final"
        android:hint="@string/loginUsername"
        android:inputType="textWebEmailAddress"
        android:paddingBottom="@dimen/shape_edittext_padding_top_bottom"
        android:paddingLeft="@dimen/shape_edittext_padding_left_right"
        android:paddingRight="@dimen/shape_edittext_padding_left_right"
        android:paddingTop="@dimen/shape_edittext_padding_top_bottom"
        android:singleLine="true" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shape_edittext_intra_distance"
        android:background="@drawable/shape_edittext_final"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/shape_edittext_padding_top_bottom"
        android:paddingLeft="@dimen/shape_edittext_padding_left_right"
        android:paddingRight="@dimen/shape_edittext_padding_left_right"
        android:paddingTop="@dimen/shape_edittext_padding_top_bottom"
        android:singleLine="true" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton" />

    <TextView
        android:id="@+id/loginForgotEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:selectAllOnFocus="true"
        android:text="@string/loginForgotEmail" />

    <TextView
        android:id="@+id/loginForgotPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:text="@string/loginForgotPassword" />

</LinearLayout>